syntax = "proto3";

option csharp_namespace = "GRPCStreamTest.Client";

import "google/protobuf/timestamp.proto";

package chat;

service Chat {
	rpc SendMessage (stream ClientToServerMessage) returns (stream ServerToClientMessage);
	rpc GetMessages (stream ServerToClientMessage) returns (ServerToClientMessage);
	rpc GetMessagesStream (stream ServerToClientMessage) returns (stream ServerToClientMessage);
}

message ClientToServerMessage {
	string text = 1;
}

message ServerToClientMessage {
	string text = 1;
	google.protobuf.Timestamp timestamp = 2;
}

message MultiServerToClientMessage {
	repeated ServerToClientMessage message = 1;
}